"To sphere" operation unexpected behavior with proportional editing on #65205

Closed
opened 2019-05-27 23:27:54 +02:00 by Warp Kaiba · 5 comments

System Information
Operating system: Win 10
Graphics card: NVIDIA GeForce GTX 970

Blender Version
Broken: 2.79b release, also 2.80 2019-05-26 d525c76003 branch: blender2.7

Short description of error
Using "To Sphere" on a mesh that has unselected, unconnected polygons, while proportional editing is enabled in any way causes selected polygons to abnormally increase in size as it becomes spherical, rather than staying at a similar size. The size of the outputted sphere is larger when there are more polygons disconnected from the target.

Exact steps for others to reproduce the error
Use attached file.
Press ALT-SHIFT-S (To Sphere default keybinding) and spherize the spikey shape to 100%.

tospherebug.blend

**System Information** Operating system: Win 10 Graphics card: NVIDIA GeForce GTX 970 **Blender Version** Broken: 2.79b release, also 2.80 2019-05-26 d525c76003b3 branch: blender2.7 **Short description of error** Using "To Sphere" on a mesh that has unselected, unconnected polygons, while proportional editing is enabled in any way causes selected polygons to abnormally increase in size as it becomes spherical, rather than staying at a similar size. The size of the outputted sphere is larger when there are more polygons disconnected from the target. **Exact steps for others to reproduce the error** Use attached file. Press ALT-SHIFT-S (To Sphere default keybinding) and spherize the spikey shape to 100%. [tospherebug.blend](https://archive.blender.org/developer/F7072879/tospherebug.blend)
Author

Added subscriber: @MilesKitaro

Added subscriber: @MilesKitaro
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm the behavior, same happens in 2.79.
I think this will go for the boundingbox of the entire object in that case, will check...

Will confirm for now, although this might turn out to be now bug in the end...

Can confirm the behavior, same happens in 2.79. I think this will go for the boundingbox of the entire object in that case, will check... Will confirm for now, although this might turn out to be now bug in the end...

This issue was referenced by 8d88d9fd33

This issue was referenced by 8d88d9fd339dc2296e17667ad51d6cd1090ede3d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-11-05 05:46:24 +01:00
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#65205
No description provided.