Fix T65205: "To Sphere" radius too large with proportional editing

The radius is now calculated based on the vertices being transformed
by proportional editing, updated when the falloff changes.