source/blender/editors/transform/transform_mode_bend.c
@@ -278,8 +278,6 @@ void initBend(TransInfo *t)
   }
   calculateCenterLocal(t, t->center_global);
 
-  t->val = 0.0f;
-
   data = MEM_callocN(sizeof(*data), __func__);
 
   curs = t->scene->cursor.location;
